# secure_guard

./: .dockerignore  .env  .env.example  .env.test  .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  Dockerfile  README.md  SETUP_STATUS.md  build-all-installers.bat  docker-compose.telemetry.yml  docker-compose.yml  myservice.ps1  otel-collector-config.yaml  prometheus.yml  test_new_script.bat  test_script.bat
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: document-updater.md
.github/workflows/: ci.yml
agent-deployment/: AGENT_INSTALLATION_GUIDE.md  README.md  install_agent.bat  test_agent.bat  uninstall_agent.bat
config/: deploy.yml
crates/secureguard-agent/: Cargo.toml
crates/secureguard-agent/src/: main.rs
crates/secureguard-agent/src/agent/: collector.rs  core.rs  mod.rs  monitor.rs  scanner.rs  updater.rs
crates/secureguard-agent/src/communication/: client.rs  encryption.rs  messages.rs  mod.rs  protocol.rs
crates/secureguard-agent/src/features/: manager.rs
crates/secureguard-agent/src/security/: auth.rs  mod.rs
crates/secureguard-agent/src/system/: startup.rs  updater.rs
crates/secureguard-agent/src/utils/: config.rs  logging.rs  mod.rs  platform.rs
crates/secureguard-api/: Cargo.toml
crates/secureguard-api/src/: config.rs  database.rs  lib.rs  main.rs  routes.rs  telemetry.rs
crates/secureguard-api/src/handlers/: agent_communication.rs  agents.rs  auth.rs  health.rs  mod.rs  pipeline.rs  threats.rs  websocket_handlers.rs
crates/secureguard-api/src/middleware/: auth.rs  mod.rs  rbac.rs
crates/secureguard-api/src/routes/admin/: mod.rs  role_routes.rs  subscription_routes.rs
crates/secureguard-api/src/services/: agent_communication.rs  agent_service.rs  api_key_service.rs  auth_service.rs  config_service.rs  event_processor.rs  mod.rs  notification_service.rs  processing_pipeline.rs  realtime_service.rs  remote_command_service.rs  role_management_service.rs  security_monitoring_service.rs  subscription_admin_service.rs  subscription_service.rs  test_utils.rs  threat_service.rs  user_service.rs
crates/secureguard-api/src/websocket/: agent_handler.rs  connection_manager.rs  dashboard_handler.rs  message_router.rs  mod.rs
crates/secureguard-api/tests/: agent_management_simple_tests.rs  agent_management_workflow_tests.rs  agent_tests.rs  agent_tests.rs.disabled  auth_tests.rs  basic_workflow_tests.rs  customer_lifecycle_mocks.rs  customer_lifecycle_tests.rs  customer_workflow_final.rs  customer_workflow_simple.rs  customer_workflow_tests.rs  integration_tests.rs  multi_tenant_workflow_tests.rs  rbac_simple_tests.rs  rbac_workflow_tests.rs  security_monitoring_test.rs  security_monitoring_test.rs.disabled  simple_workflow_tests.rs  test_data_setup.rs  workflow_tests.rs
crates/secureguard-shared/: Cargo.toml
crates/secureguard-shared/src/: errors.rs  lib.rs  models.rs  threat_models.rs
dashboard/: .env  package-lock.json  package.json
dashboard/src/: App.tsx  SimpleApp.tsx
dashboard/src/components/Charts/: SystemHealthChart.tsx  ThreatActivityChart.tsx
dashboard/src/components/Dashboard/: AgentStatusMap.tsx  RecentAlertsTable.tsx
dashboard/src/contexts/: AuthContext.tsx  SocketContext.tsx
dashboard/src/pages/: Admin.tsx  Agents.tsx  Dashboard.tsx  Login.tsx  Reports.tsx  Settings.tsx  Threats.tsx
dashboard/src/services/: authService.ts
docs/: .gitkeep  API_Documentation.md  Admin_Area_Documentation.md  Admin_Interface_Guide.md  Agent_Deployment_Guide.md  Agent_Implementation_Plan.md  Agent_Lifecycle_Management.md  Database_Schema_Documentation.md  Development_Setup_Guide.md  Documentation_Standards.md  Frontend_Security_Guide.md  Implementation_Status.md  Kamal_Deployment_Guide.md  NEXT_STEPS.md  Password_Security_System.md  Phase2_Architecture.md  Production_Deployment_Checklist.md  README.md  Roadmap.md  STATUS_SUMMARY.md  Strategic_Next_Steps.md  Support_System_Documentation.md  Telemetry_Quick_Start.md  de_SecureGuard Technical & Implementation Guide.md  en_SecureGuard Technical & Implementation Guide.md  manual_db_setup.md
docs/admin/: Role_Permission_Management_Guide.md  Subscription_Admin_Management_Guide.md
docs/api/: API_Documentation.md  API_Key_Agent_Registration.md
docs/business/: Lastenheft.md  Subscription_Business_Model.md
docs/deployment/: Production_Deployment_Checklist.md
docs/development/: Development_Setup_Guide.md
docs/monitoring/: Logging_Monitoring_Guide.md  Telemetry_Observability_Guide.md
docs/security/: Frontend_Security_Guide.md  Security_Monitoring_Alerting_Guide.md  User_Guide_Password_Security.md
docs/testing/: Workflow_Testing_Guide.md
frontend/: .env.development  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  telemetry.ts  vite-env.d.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useLoginSecurity.ts  useSecurityMonitoring.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: Agents.tsx  AssetManagement.tsx  Dashboard.tsx  Login.tsx  Security.tsx  Settings.tsx  Subscriptions.tsx  Users.tsx
frontend/src/stores/: authStore.ts
installer/: Install-SecureGuardAgent.ps1  SecureGuardAgent.nsi  SecureGuardAgent.wxs  config.toml
migrations/: 0009_add_password_reset_tokens_table.sql  001_create_initial_schema.sql  002_create_threats_schema.sql  003_add_user_agent_linking.sql  004_add_subscription_system.sql  005_add_remote_commands_system.sql  006_add_security_monitoring_system.sql  007_add_role_permission_system.sql.disabled  007_fix_schema_mismatches.sql  008_add_password_security_system.sql  V001_create_initial_schema.sql
scripts/: README.md  myservice  myservice.bat  myservice.ps1  run_tests.ps1  setup-kamal.ps1  setup_dev.ps1  setup_dev.sh  test_setup.sql
scripts/deployment/: myservice.bat  myservice.ps1  myservice.sh
scripts/development/: demo_port_check  setup_dev_fixed.sh
scripts/testing/: run_workflow_tests.bat  run_workflow_tests.ps1
(+38 files in other folders)
