[package]
name = "secureguard-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "ipnetwork"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
argon2 = "0.5"
redis = { version = "0.24", features = ["tokio-comp"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde_yaml = "0.9"
regex = "1.0"
ipnetwork = "0.20"

[dependencies.secureguard-shared]
path = "../secureguard-shared"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
http-body-util = "0.1"